--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -150,7 +150,7 @@ add_library(telescope SHARED
 
         include/angle.hpp
     src/angle.cpp
-        include/geometric_shapes.hpp include/polygon_shape.hpp src/polygon_shape.cpp include/common.hpp src/common.cpp src/renderable.cpp include/transform.hpp src/transform.cpp include/render_target.hpp)
+        include/geometric_shapes.hpp include/polygon_shape.hpp src/polygon_shape.cpp include/common.hpp src/common.cpp src/renderable.cpp include/transform.hpp src/transform.cpp include/render_target.hpp include/camera.hpp src/camera.cpp)
 
 set_target_properties(telescope PROPERTIES
   LINKER_LANGUAGE CXX
