--- a/.github/workflows/Test.yaml
+++ b/.github/workflows/Test.yaml
@@ -22,11 +22,13 @@ jobs:
         wget -qO - http://packages.lunarg.com/lunarg-signing-key-pub.asc | sudo apt-key add -
         sudo wget -qO /etc/apt/sources.list.d/lunarg-vulkan-focal.list http://packages.lunarg.com/vulkan/lunarg-vulkan-focal.list
         sudo apt update && sudo apt install --upgrade cmake
-        sudo apt install --upgrade libsdl2-dev libsdl2-image-dev libsdl2-mixer-dev libsdl2-ttf-dev libsdl2-net-dev libbox2d-dev libglm-dev libvulkan-dev
+        sudo apt install --upgrade libsdl2-dev libsdl2-image-dev libsdl2-mixer-dev libsdl2-ttf-dev libsdl2-net-dev 
+        sudo apt install libglm-dev libvulkan-dev
+        sudo apt install libbox2d
     - name: 🦏 Build
       run: |
         mkdir build && cd build
-        cmake .. -DSHADERC_LIB_DIR=/usr/lib/x86_64-linux-gnu -DCMAKE_INSTALL_PREFIX=..
+        cmake .. -DCMAKE_INSTALL_PREFIX=..
         make clean && make install
     - name: 🧪 Unit tests
       run: echo noop #cd build && make test ARGS="-N" && make test ARGS="-V"
