--- a/.github/workflows/Test.yaml
+++ b/.github/workflows/Test.yaml
@@ -18,13 +18,14 @@ jobs:
       with:
         submodules: 'true'
     - name: 🧱 Install build dependencies
-      run: |
+      run: |        
         wget -qO - http://packages.lunarg.com/lunarg-signing-key-pub.asc | sudo apt-key add -
         sudo wget -qO /etc/apt/sources.list.d/lunarg-vulkan-focal.list http://packages.lunarg.com/vulkan/lunarg-vulkan-focal.list
         sudo apt update && sudo apt install --upgrade cmake
-        sudo apt install --upgrade libsdl2-dev libsdl2-image-dev libsdl2-mixer-dev libsdl2-ttf-dev libsdl2-net-dev 
+        sudo apt install --upgrade 
         sudo apt install libglm-dev libvulkan-dev
-        sudo apt install libbox2d2
+        sudo aptitude install libsdl2-dev libsdl2-image-dev libsdl2-mixer-dev #libsdl2-ttf-dev libsdl2-net-dev 
+        sudo apt install libbox2d-dev
     - name: 🦏 Build
       run: |
         mkdir build && cd build
