--- a/.github/workflows/Test.yaml
+++ b/.github/workflows/Test.yaml
@@ -19,7 +19,8 @@ jobs:
         submodules: 'true'
     - name: 🧱 Install build dependencies
       run: |        
-        sudo aptitude install libglm-dev libvulkan-dev libsdl2-dev libsdl2-image-dev libsdl2-mixer-dev libbox2d-dev
+        sudo apt-get update
+        sudo apt-get install libglm-dev libvulkan-dev libsdl2-dev libsdl2-image-dev libsdl2-mixer-dev libbox2d-dev
     - name: 🦏 Build
       run: |
         mkdir build && cd build
