--- a/.github/workflows/Test.yaml
+++ b/.github/workflows/Test.yaml
@@ -19,8 +19,13 @@ jobs:
         submodules: 'true'
     - name: 🧱 Install build dependencies
       run: |        
-        sudo apt-get update
-        sudo apt-get install libglm-dev libvulkan-dev libsdl2-dev libsdl2-image-dev libsdl2-mixer-dev libbox2d-dev
+        wget -qO - http://packages.lunarg.com/lunarg-signing-key-pub.asc | sudo apt-key add -
+        sudo wget -qO /etc/apt/sources.list.d/lunarg-vulkan-focal.list http://packages.lunarg.com/vulkan/lunarg-vulkan-focal.list
+        sudo apt update && sudo apt install --upgrade cmake
+        sudo apt install --upgrade 
+        sudo apt install libglm-dev libvulkan-dev
+        sudo apt install libsdl2-dev libsdl2-image-dev libsdl2-mixer-dev
+        sudo apt install libbox2d-dev
     - name: 🦏 Build
       run: |
         mkdir build && cd build
